codigoTP/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> ss
Rule 1     ss -> s
Rule 2     ss -> s comm ss
Rule 3     s -> if
Rule 4     s -> w
Rule 5     s -> d
Rule 6     s -> for
Rule 7     s -> a PUNTOCOMA
Rule 8     s -> o PUNTOCOMA
Rule 9     s -> RETURN r PUNTOCOMA
Rule 10    r -> v
Rule 11    r -> a
Rule 12    r -> o
Rule 13    comm -> comm COMENTARIO
Rule 14    comm -> <empty>
Rule 15    if -> IF LPAREN v2 RPAREN bq
Rule 16    if -> IF LPAREN v2 RPAREN bq ELSE bq
Rule 17    w -> WHILE LPAREN v2 RPAREN bq
Rule 18    d -> DO bq WHILE LPAREN v2 RPAREN PUNTOCOMA
Rule 19    for -> FOR LPAREN PUNTOCOMA v2 PUNTOCOMA RPAREN bq
Rule 20    for -> FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA RPAREN bq
Rule 21    for -> FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
Rule 22    for -> FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
Rule 23    for -> FOR LPAREN PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
Rule 24    for -> FOR LPAREN PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
Rule 25    f -> TRUE
Rule 26    f -> FALSE
Rule 27    v -> NOT f
Rule 28    v2 -> v2 OR v
Rule 29    v2 -> v2 AND v
Rule 30    v2 -> v2 IGUALIGUAL v
Rule 31    v2 -> v2 DESIGUALDAD v
Rule 32    v2 -> v2 MAYOR v
Rule 33    v2 -> v2 MENOR v
Rule 34    f -> LPAREN v2 RPAREN
Rule 35    v2 -> v
Rule 36    v -> f
Rule 37    v -> v MENOS f
Rule 38    v -> v POR f
Rule 39    v -> v DIV f
Rule 40    v -> v POTENCIA f
Rule 41    v -> v PORCENTAJE f
Rule 42    v -> v SUMA f
Rule 43    v2 -> v2 INTERROGACION v DOSPUNTOS v
Rule 44    f -> NUMBER
Rule 45    f -> MENOS f
Rule 46    f -> VARIABLE index
Rule 47    f -> COLINEALES LPAREN v COMA v RPAREN
Rule 48    f -> MULTIPLICACIONESCALAR LPAREN v COMA v COMA v RPAREN
Rule 49    f -> MULTIPLICACIONESCALAR LPAREN v COMA v RPAREN
Rule 50    f -> CAPITALIZAR LPAREN v RPAREN
Rule 51    f -> LENGTH LPAREN v RPAREN
Rule 52    f -> CADENA
Rule 53    expl -> CORCHETEA lista CORCHETEC
Rule 54    expl -> LLAVEABIERTA listareg LLAVECERRADA
Rule 55    lista -> lista COMA v
Rule 56    lista -> v
Rule 57    listareg -> listareg COMA VARIABLE DOSPUNTOS v
Rule 58    listareg -> VARIABLE DOSPUNTOS v
Rule 59    f -> expl index
Rule 60    a -> VARIABLE index IGUAL v2
Rule 61    index -> index CORCHETEA v CORCHETEC
Rule 62    index -> index PUNTO VARIABLE
Rule 63    index -> <empty>
Rule 64    o -> VARIABLE index MASIGUAL v2
Rule 65    o -> VARIABLE index MENOSIGUAL v2
Rule 66    o -> VARIABLE index PORIGUAL v2
Rule 67    o -> VARIABLE index DIVIGUAL v2
Rule 68    o -> VARIABLE index MASMAS
Rule 69    o -> VARIABLE index MENOSMENOS
Rule 70    o -> MASMAS VARIABLE index
Rule 71    o -> MENOSMENOS VARIABLE index
Rule 72    o -> PRINT LPAREN v RPAREN
Rule 73    bq -> comm s
Rule 74    bq -> LLAVEABIERTA comm ss LLAVECERRADA

Terminals, with rules where they appear

AND                  : 29
CADENA               : 52
CAPITALIZAR          : 50
COLINEALES           : 47
COMA                 : 47 48 48 49 55 57
COMENTARIO           : 13
CORCHETEA            : 53 61
CORCHETEC            : 53 61
DESIGUALDAD          : 31
DIV                  : 39
DIVIGUAL             : 67
DO                   : 18
DOSPUNTOS            : 43 57 58
ELSE                 : 16
FALSE                : 26
FOR                  : 19 20 21 22 23 24
IF                   : 15 16
IGUAL                : 60
IGUALIGUAL           : 30
INTERROGACION        : 43
LENGTH               : 51
LLAVEABIERTA         : 54 74
LLAVECERRADA         : 54 74
LPAREN               : 15 16 17 18 19 20 21 22 23 24 34 47 48 49 50 51 72
MASIGUAL             : 64
MASMAS               : 68 70
MAYOR                : 32
MENOR                : 33
MENOS                : 37 45
MENOSIGUAL           : 65
MENOSMENOS           : 69 71
MULTIPLICACIONESCALAR : 48 49
NEWLINE              : 
NOT                  : 27
NUMBER               : 44
OR                   : 28
POR                  : 38
PORCENTAJE           : 41
PORIGUAL             : 66
POTENCIA             : 40
PRINT                : 72
PUNTO                : 62
PUNTOCOMA            : 7 8 9 18 19 19 20 20 21 21 22 22 23 23 24 24
RETURN               : 9
RPAREN               : 15 16 17 18 19 20 21 22 23 24 34 47 48 49 50 51 72
SUMA                 : 42
TRUE                 : 25
VARIABLE             : 46 57 58 60 62 64 65 66 67 68 69 70 71
WHILE                : 17 18
error                : 

Nonterminals, with rules where they appear

a                    : 7 11 20 21 22 22 24
bq                   : 15 16 16 17 18 19 20 21 22 23 24
comm                 : 2 13 73 74
d                    : 5
expl                 : 59
f                    : 27 36 37 38 39 40 41 42 45
for                  : 6
if                   : 3
index                : 46 59 60 61 62 64 65 66 67 68 69 70 71
lista                : 53 55
listareg             : 54 57
o                    : 8 12 21 23
r                    : 9
s                    : 1 2 73
ss                   : 2 74 0
v                    : 10 28 29 30 31 32 33 35 37 38 39 40 41 42 43 43 47 47 48 48 48 49 49 50 51 55 56 57 58 61 72
v2                   : 15 16 17 18 19 20 21 22 23 24 28 29 30 31 32 33 34 43 60 64 65 66 67
w                    : 4

Parsing method: LALR

state 0

    (0) S' -> . ss
    (1) ss -> . s
    (2) ss -> . s comm ss
    (3) s -> . if
    (4) s -> . w
    (5) s -> . d
    (6) s -> . for
    (7) s -> . a PUNTOCOMA
    (8) s -> . o PUNTOCOMA
    (9) s -> . RETURN r PUNTOCOMA
    (15) if -> . IF LPAREN v2 RPAREN bq
    (16) if -> . IF LPAREN v2 RPAREN bq ELSE bq
    (17) w -> . WHILE LPAREN v2 RPAREN bq
    (18) d -> . DO bq WHILE LPAREN v2 RPAREN PUNTOCOMA
    (19) for -> . FOR LPAREN PUNTOCOMA v2 PUNTOCOMA RPAREN bq
    (20) for -> . FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA RPAREN bq
    (21) for -> . FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
    (22) for -> . FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
    (23) for -> . FOR LPAREN PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
    (24) for -> . FOR LPAREN PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
    (60) a -> . VARIABLE index IGUAL v2
    (64) o -> . VARIABLE index MASIGUAL v2
    (65) o -> . VARIABLE index MENOSIGUAL v2
    (66) o -> . VARIABLE index PORIGUAL v2
    (67) o -> . VARIABLE index DIVIGUAL v2
    (68) o -> . VARIABLE index MASMAS
    (69) o -> . VARIABLE index MENOSMENOS
    (70) o -> . MASMAS VARIABLE index
    (71) o -> . MENOSMENOS VARIABLE index
    (72) o -> . PRINT LPAREN v RPAREN

    RETURN          shift and go to state 2
    IF              shift and go to state 9
    WHILE           shift and go to state 3
    DO              shift and go to state 1
    FOR             shift and go to state 7
    VARIABLE        shift and go to state 8
    MASMAS          shift and go to state 15
    MENOSMENOS      shift and go to state 17
    PRINT           shift and go to state 4

    a                              shift and go to state 10
    d                              shift and go to state 11
    for                            shift and go to state 6
    ss                             shift and go to state 12
    o                              shift and go to state 13
    s                              shift and go to state 14
    w                              shift and go to state 16
    if                             shift and go to state 5

state 1

    (18) d -> DO . bq WHILE LPAREN v2 RPAREN PUNTOCOMA
    (73) bq -> . comm s
    (74) bq -> . LLAVEABIERTA comm ss LLAVECERRADA
    (13) comm -> . comm COMENTARIO
    (14) comm -> .

    LLAVEABIERTA    shift and go to state 18
    COMENTARIO      reduce using rule 14 (comm -> .)
    RETURN          reduce using rule 14 (comm -> .)
    IF              reduce using rule 14 (comm -> .)
    WHILE           reduce using rule 14 (comm -> .)
    DO              reduce using rule 14 (comm -> .)
    FOR             reduce using rule 14 (comm -> .)
    VARIABLE        reduce using rule 14 (comm -> .)
    MASMAS          reduce using rule 14 (comm -> .)
    MENOSMENOS      reduce using rule 14 (comm -> .)
    PRINT           reduce using rule 14 (comm -> .)

    comm                           shift and go to state 19
    bq                             shift and go to state 20

state 2

    (9) s -> RETURN . r PUNTOCOMA
    (10) r -> . v
    (11) r -> . a
    (12) r -> . o
    (27) v -> . NOT f
    (36) v -> . f
    (37) v -> . v MENOS f
    (38) v -> . v POR f
    (39) v -> . v DIV f
    (40) v -> . v POTENCIA f
    (41) v -> . v PORCENTAJE f
    (42) v -> . v SUMA f
    (60) a -> . VARIABLE index IGUAL v2
    (64) o -> . VARIABLE index MASIGUAL v2
    (65) o -> . VARIABLE index MENOSIGUAL v2
    (66) o -> . VARIABLE index PORIGUAL v2
    (67) o -> . VARIABLE index DIVIGUAL v2
    (68) o -> . VARIABLE index MASMAS
    (69) o -> . VARIABLE index MENOSMENOS
    (70) o -> . MASMAS VARIABLE index
    (71) o -> . MENOSMENOS VARIABLE index
    (72) o -> . PRINT LPAREN v RPAREN
    (25) f -> . TRUE
    (26) f -> . FALSE
    (34) f -> . LPAREN v2 RPAREN
    (44) f -> . NUMBER
    (45) f -> . MENOS f
    (46) f -> . VARIABLE index
    (47) f -> . COLINEALES LPAREN v COMA v RPAREN
    (48) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v COMA v RPAREN
    (49) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v RPAREN
    (50) f -> . CAPITALIZAR LPAREN v RPAREN
    (51) f -> . LENGTH LPAREN v RPAREN
    (52) f -> . CADENA
    (59) f -> . expl index
    (53) expl -> . CORCHETEA lista CORCHETEC
    (54) expl -> . LLAVEABIERTA listareg LLAVECERRADA

    NOT             shift and go to state 40
    VARIABLE        shift and go to state 30
    MASMAS          shift and go to state 15
    MENOSMENOS      shift and go to state 17
    PRINT           shift and go to state 4
    TRUE            shift and go to state 23
    FALSE           shift and go to state 32
    LPAREN          shift and go to state 29
    NUMBER          shift and go to state 28
    MENOS           shift and go to state 25
    COLINEALES      shift and go to state 21
    MULTIPLICACIONESCALAR shift and go to state 26
    CAPITALIZAR     shift and go to state 36
    LENGTH          shift and go to state 37
    CADENA          shift and go to state 24
    CORCHETEA       shift and go to state 22
    LLAVEABIERTA    shift and go to state 34

    a                              shift and go to state 31
    f                              shift and go to state 33
    expl                           shift and go to state 27
    o                              shift and go to state 35
    r                              shift and go to state 38
    v                              shift and go to state 39

state 3

    (17) w -> WHILE . LPAREN v2 RPAREN bq

    LPAREN          shift and go to state 41


state 4

    (72) o -> PRINT . LPAREN v RPAREN

    LPAREN          shift and go to state 42


state 5

    (3) s -> if .

    WHILE           reduce using rule 3 (s -> if .)
    COMENTARIO      reduce using rule 3 (s -> if .)
    RETURN          reduce using rule 3 (s -> if .)
    IF              reduce using rule 3 (s -> if .)
    DO              reduce using rule 3 (s -> if .)
    FOR             reduce using rule 3 (s -> if .)
    VARIABLE        reduce using rule 3 (s -> if .)
    MASMAS          reduce using rule 3 (s -> if .)
    MENOSMENOS      reduce using rule 3 (s -> if .)
    PRINT           reduce using rule 3 (s -> if .)
    $end            reduce using rule 3 (s -> if .)
    LLAVECERRADA    reduce using rule 3 (s -> if .)
    ELSE            reduce using rule 3 (s -> if .)


state 6

    (6) s -> for .

    WHILE           reduce using rule 6 (s -> for .)
    COMENTARIO      reduce using rule 6 (s -> for .)
    RETURN          reduce using rule 6 (s -> for .)
    IF              reduce using rule 6 (s -> for .)
    DO              reduce using rule 6 (s -> for .)
    FOR             reduce using rule 6 (s -> for .)
    VARIABLE        reduce using rule 6 (s -> for .)
    MASMAS          reduce using rule 6 (s -> for .)
    MENOSMENOS      reduce using rule 6 (s -> for .)
    PRINT           reduce using rule 6 (s -> for .)
    $end            reduce using rule 6 (s -> for .)
    LLAVECERRADA    reduce using rule 6 (s -> for .)
    ELSE            reduce using rule 6 (s -> for .)


state 7

    (19) for -> FOR . LPAREN PUNTOCOMA v2 PUNTOCOMA RPAREN bq
    (20) for -> FOR . LPAREN a PUNTOCOMA v2 PUNTOCOMA RPAREN bq
    (21) for -> FOR . LPAREN a PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
    (22) for -> FOR . LPAREN a PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
    (23) for -> FOR . LPAREN PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
    (24) for -> FOR . LPAREN PUNTOCOMA v2 PUNTOCOMA a RPAREN bq

    LPAREN          shift and go to state 43


state 8

    (60) a -> VARIABLE . index IGUAL v2
    (64) o -> VARIABLE . index MASIGUAL v2
    (65) o -> VARIABLE . index MENOSIGUAL v2
    (66) o -> VARIABLE . index PORIGUAL v2
    (67) o -> VARIABLE . index DIVIGUAL v2
    (68) o -> VARIABLE . index MASMAS
    (69) o -> VARIABLE . index MENOSMENOS
    (61) index -> . index CORCHETEA v CORCHETEC
    (62) index -> . index PUNTO VARIABLE
    (63) index -> .

    IGUAL           reduce using rule 63 (index -> .)
    MASIGUAL        reduce using rule 63 (index -> .)
    MENOSIGUAL      reduce using rule 63 (index -> .)
    PORIGUAL        reduce using rule 63 (index -> .)
    DIVIGUAL        reduce using rule 63 (index -> .)
    MASMAS          reduce using rule 63 (index -> .)
    MENOSMENOS      reduce using rule 63 (index -> .)
    CORCHETEA       reduce using rule 63 (index -> .)
    PUNTO           reduce using rule 63 (index -> .)

    index                          shift and go to state 44

state 9

    (15) if -> IF . LPAREN v2 RPAREN bq
    (16) if -> IF . LPAREN v2 RPAREN bq ELSE bq

    LPAREN          shift and go to state 45


state 10

    (7) s -> a . PUNTOCOMA

    PUNTOCOMA       shift and go to state 46


state 11

    (5) s -> d .

    WHILE           reduce using rule 5 (s -> d .)
    COMENTARIO      reduce using rule 5 (s -> d .)
    RETURN          reduce using rule 5 (s -> d .)
    IF              reduce using rule 5 (s -> d .)
    DO              reduce using rule 5 (s -> d .)
    FOR             reduce using rule 5 (s -> d .)
    VARIABLE        reduce using rule 5 (s -> d .)
    MASMAS          reduce using rule 5 (s -> d .)
    MENOSMENOS      reduce using rule 5 (s -> d .)
    PRINT           reduce using rule 5 (s -> d .)
    $end            reduce using rule 5 (s -> d .)
    LLAVECERRADA    reduce using rule 5 (s -> d .)
    ELSE            reduce using rule 5 (s -> d .)


state 12

    (0) S' -> ss .



state 13

    (8) s -> o . PUNTOCOMA

    PUNTOCOMA       shift and go to state 47


state 14

    (1) ss -> s .
    (2) ss -> s . comm ss
    (13) comm -> . comm COMENTARIO
    (14) comm -> .

    $end            reduce using rule 1 (ss -> s .)
    LLAVECERRADA    reduce using rule 1 (ss -> s .)
    COMENTARIO      reduce using rule 14 (comm -> .)
    RETURN          reduce using rule 14 (comm -> .)
    IF              reduce using rule 14 (comm -> .)
    WHILE           reduce using rule 14 (comm -> .)
    DO              reduce using rule 14 (comm -> .)
    FOR             reduce using rule 14 (comm -> .)
    VARIABLE        reduce using rule 14 (comm -> .)
    MASMAS          reduce using rule 14 (comm -> .)
    MENOSMENOS      reduce using rule 14 (comm -> .)
    PRINT           reduce using rule 14 (comm -> .)

    comm                           shift and go to state 48

state 15

    (70) o -> MASMAS . VARIABLE index

    VARIABLE        shift and go to state 49


state 16

    (4) s -> w .

    WHILE           reduce using rule 4 (s -> w .)
    COMENTARIO      reduce using rule 4 (s -> w .)
    RETURN          reduce using rule 4 (s -> w .)
    IF              reduce using rule 4 (s -> w .)
    DO              reduce using rule 4 (s -> w .)
    FOR             reduce using rule 4 (s -> w .)
    VARIABLE        reduce using rule 4 (s -> w .)
    MASMAS          reduce using rule 4 (s -> w .)
    MENOSMENOS      reduce using rule 4 (s -> w .)
    PRINT           reduce using rule 4 (s -> w .)
    $end            reduce using rule 4 (s -> w .)
    LLAVECERRADA    reduce using rule 4 (s -> w .)
    ELSE            reduce using rule 4 (s -> w .)


state 17

    (71) o -> MENOSMENOS . VARIABLE index

    VARIABLE        shift and go to state 50


state 18

    (74) bq -> LLAVEABIERTA . comm ss LLAVECERRADA
    (13) comm -> . comm COMENTARIO
    (14) comm -> .

    COMENTARIO      reduce using rule 14 (comm -> .)
    RETURN          reduce using rule 14 (comm -> .)
    IF              reduce using rule 14 (comm -> .)
    WHILE           reduce using rule 14 (comm -> .)
    DO              reduce using rule 14 (comm -> .)
    FOR             reduce using rule 14 (comm -> .)
    VARIABLE        reduce using rule 14 (comm -> .)
    MASMAS          reduce using rule 14 (comm -> .)
    MENOSMENOS      reduce using rule 14 (comm -> .)
    PRINT           reduce using rule 14 (comm -> .)

    comm                           shift and go to state 51

state 19

    (73) bq -> comm . s
    (13) comm -> comm . COMENTARIO
    (3) s -> . if
    (4) s -> . w
    (5) s -> . d
    (6) s -> . for
    (7) s -> . a PUNTOCOMA
    (8) s -> . o PUNTOCOMA
    (9) s -> . RETURN r PUNTOCOMA
    (15) if -> . IF LPAREN v2 RPAREN bq
    (16) if -> . IF LPAREN v2 RPAREN bq ELSE bq
    (17) w -> . WHILE LPAREN v2 RPAREN bq
    (18) d -> . DO bq WHILE LPAREN v2 RPAREN PUNTOCOMA
    (19) for -> . FOR LPAREN PUNTOCOMA v2 PUNTOCOMA RPAREN bq
    (20) for -> . FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA RPAREN bq
    (21) for -> . FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
    (22) for -> . FOR LPAREN a PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
    (23) for -> . FOR LPAREN PUNTOCOMA v2 PUNTOCOMA o RPAREN bq
    (24) for -> . FOR LPAREN PUNTOCOMA v2 PUNTOCOMA a RPAREN bq
    (60) a -> . VARIABLE index IGUAL v2
    (64) o -> . VARIABLE index MASIGUAL v2
    (65) o -> . VARIABLE index MENOSIGUAL v2
    (66) o -> . VARIABLE index PORIGUAL v2
    (67) o -> . VARIABLE index DIVIGUAL v2
    (68) o -> . VARIABLE index MASMAS
    (69) o -> . VARIABLE index MENOSMENOS
    (70) o -> . MASMAS VARIABLE index
    (71) o -> . MENOSMENOS VARIABLE index
    (72) o -> . PRINT LPAREN v RPAREN

    COMENTARIO      shift and go to state 52
    RETURN          shift and go to state 2
    IF              shift and go to state 9
    WHILE           shift and go to state 3
    DO              shift and go to state 1
    FOR             shift and go to state 7
    VARIABLE        shift and go to state 8
    MASMAS          shift and go to state 15
    MENOSMENOS      shift and go to state 17
    PRINT           shift and go to state 4

    a                              shift and go to state 10
    d                              shift and go to state 11
    for                            shift and go to state 6
    o                              shift and go to state 13
    s                              shift and go to state 53
    w                              shift and go to state 16
    if                             shift and go to state 5

state 20

    (18) d -> DO bq . WHILE LPAREN v2 RPAREN PUNTOCOMA

    WHILE           shift and go to state 54


state 21

    (47) f -> COLINEALES . LPAREN v COMA v RPAREN

    LPAREN          shift and go to state 55


state 22

    (53) expl -> CORCHETEA . lista CORCHETEC
    (55) lista -> . lista COMA v
    (56) lista -> . v
    (27) v -> . NOT f
    (36) v -> . f
    (37) v -> . v MENOS f
    (38) v -> . v POR f
    (39) v -> . v DIV f
    (40) v -> . v POTENCIA f
    (41) v -> . v PORCENTAJE f
    (42) v -> . v SUMA f
    (25) f -> . TRUE
    (26) f -> . FALSE
    (34) f -> . LPAREN v2 RPAREN
    (44) f -> . NUMBER
    (45) f -> . MENOS f
    (46) f -> . VARIABLE index
    (47) f -> . COLINEALES LPAREN v COMA v RPAREN
    (48) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v COMA v RPAREN
    (49) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v RPAREN
    (50) f -> . CAPITALIZAR LPAREN v RPAREN
    (51) f -> . LENGTH LPAREN v RPAREN
    (52) f -> . CADENA
    (59) f -> . expl index
    (53) expl -> . CORCHETEA lista CORCHETEC
    (54) expl -> . LLAVEABIERTA listareg LLAVECERRADA

    NOT             shift and go to state 40
    TRUE            shift and go to state 23
    FALSE           shift and go to state 32
    LPAREN          shift and go to state 29
    NUMBER          shift and go to state 28
    MENOS           shift and go to state 25
    VARIABLE        shift and go to state 56
    COLINEALES      shift and go to state 21
    MULTIPLICACIONESCALAR shift and go to state 26
    CAPITALIZAR     shift and go to state 36
    LENGTH          shift and go to state 37
    CADENA          shift and go to state 24
    CORCHETEA       shift and go to state 22
    LLAVEABIERTA    shift and go to state 34

    f                              shift and go to state 33
    v                              shift and go to state 58
    expl                           shift and go to state 27
    lista                          shift and go to state 57

state 23

    (25) f -> TRUE .

    DOSPUNTOS       reduce using rule 25 (f -> TRUE .)
    MENOS           reduce using rule 25 (f -> TRUE .)
    POR             reduce using rule 25 (f -> TRUE .)
    DIV             reduce using rule 25 (f -> TRUE .)
    POTENCIA        reduce using rule 25 (f -> TRUE .)
    PORCENTAJE      reduce using rule 25 (f -> TRUE .)
    SUMA            reduce using rule 25 (f -> TRUE .)
    PUNTOCOMA       reduce using rule 25 (f -> TRUE .)
    CORCHETEC       reduce using rule 25 (f -> TRUE .)
    COMA            reduce using rule 25 (f -> TRUE .)
    RPAREN          reduce using rule 25 (f -> TRUE .)
    OR              reduce using rule 25 (f -> TRUE .)
    AND             reduce using rule 25 (f -> TRUE .)
    IGUALIGUAL      reduce using rule 25 (f -> TRUE .)
    DESIGUALDAD     reduce using rule 25 (f -> TRUE .)
    MAYOR           reduce using rule 25 (f -> TRUE .)
    MENOR           reduce using rule 25 (f -> TRUE .)
    INTERROGACION   reduce using rule 25 (f -> TRUE .)
    LLAVECERRADA    reduce using rule 25 (f -> TRUE .)


state 24

    (52) f -> CADENA .

    DOSPUNTOS       reduce using rule 52 (f -> CADENA .)
    MENOS           reduce using rule 52 (f -> CADENA .)
    POR             reduce using rule 52 (f -> CADENA .)
    DIV             reduce using rule 52 (f -> CADENA .)
    POTENCIA        reduce using rule 52 (f -> CADENA .)
    PORCENTAJE      reduce using rule 52 (f -> CADENA .)
    SUMA            reduce using rule 52 (f -> CADENA .)
    PUNTOCOMA       reduce using rule 52 (f -> CADENA .)
    CORCHETEC       reduce using rule 52 (f -> CADENA .)
    COMA            reduce using rule 52 (f -> CADENA .)
    RPAREN          reduce using rule 52 (f -> CADENA .)
    OR              reduce using rule 52 (f -> CADENA .)
    AND             reduce using rule 52 (f -> CADENA .)
    IGUALIGUAL      reduce using rule 52 (f -> CADENA .)
    DESIGUALDAD     reduce using rule 52 (f -> CADENA .)
    MAYOR           reduce using rule 52 (f -> CADENA .)
    MENOR           reduce using rule 52 (f -> CADENA .)
    INTERROGACION   reduce using rule 52 (f -> CADENA .)
    LLAVECERRADA    reduce using rule 52 (f -> CADENA .)


state 25

    (45) f -> MENOS . f
    (25) f -> . TRUE
    (26) f -> . FALSE
    (34) f -> . LPAREN v2 RPAREN
    (44) f -> . NUMBER
    (45) f -> . MENOS f
    (46) f -> . VARIABLE index
    (47) f -> . COLINEALES LPAREN v COMA v RPAREN
    (48) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v COMA v RPAREN
    (49) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v RPAREN
    (50) f -> . CAPITALIZAR LPAREN v RPAREN
    (51) f -> . LENGTH LPAREN v RPAREN
    (52) f -> . CADENA
    (59) f -> . expl index
    (53) expl -> . CORCHETEA lista CORCHETEC
    (54) expl -> . LLAVEABIERTA listareg LLAVECERRADA

    TRUE            shift and go to state 23
    FALSE           shift and go to state 32
    LPAREN          shift and go to state 29
    NUMBER          shift and go to state 28
    MENOS           shift and go to state 25
    VARIABLE        shift and go to state 56
    COLINEALES      shift and go to state 21
    MULTIPLICACIONESCALAR shift and go to state 26
    CAPITALIZAR     shift and go to state 36
    LENGTH          shift and go to state 37
    CADENA          shift and go to state 24
    CORCHETEA       shift and go to state 22
    LLAVEABIERTA    shift and go to state 34

    f                              shift and go to state 59
    expl                           shift and go to state 27

state 26

    (48) f -> MULTIPLICACIONESCALAR . LPAREN v COMA v COMA v RPAREN
    (49) f -> MULTIPLICACIONESCALAR . LPAREN v COMA v RPAREN

    LPAREN          shift and go to state 60


state 27

    (59) f -> expl . index
    (61) index -> . index CORCHETEA v CORCHETEC
    (62) index -> . index PUNTO VARIABLE
    (63) index -> .

    CORCHETEA       reduce using rule 63 (index -> .)
    PUNTO           reduce using rule 63 (index -> .)
    MENOS           reduce using rule 63 (index -> .)
    POR             reduce using rule 63 (index -> .)
    DIV             reduce using rule 63 (index -> .)
    POTENCIA        reduce using rule 63 (index -> .)
    PORCENTAJE      reduce using rule 63 (index -> .)
    SUMA            reduce using rule 63 (index -> .)
    PUNTOCOMA       reduce using rule 63 (index -> .)
    CORCHETEC       reduce using rule 63 (index -> .)
    COMA            reduce using rule 63 (index -> .)
    RPAREN          reduce using rule 63 (index -> .)
    OR              reduce using rule 63 (index -> .)
    AND             reduce using rule 63 (index -> .)
    IGUALIGUAL      reduce using rule 63 (index -> .)
    DESIGUALDAD     reduce using rule 63 (index -> .)
    MAYOR           reduce using rule 63 (index -> .)
    MENOR           reduce using rule 63 (index -> .)
    INTERROGACION   reduce using rule 63 (index -> .)
    DOSPUNTOS       reduce using rule 63 (index -> .)
    LLAVECERRADA    reduce using rule 63 (index -> .)

    index                          shift and go to state 61

state 28

    (44) f -> NUMBER .

    DOSPUNTOS       reduce using rule 44 (f -> NUMBER .)
    MENOS           reduce using rule 44 (f -> NUMBER .)
    POR             reduce using rule 44 (f -> NUMBER .)
    DIV             reduce using rule 44 (f -> NUMBER .)
    POTENCIA        reduce using rule 44 (f -> NUMBER .)
    PORCENTAJE      reduce using rule 44 (f -> NUMBER .)
    SUMA            reduce using rule 44 (f -> NUMBER .)
    PUNTOCOMA       reduce using rule 44 (f -> NUMBER .)
    CORCHETEC       reduce using rule 44 (f -> NUMBER .)
    COMA            reduce using rule 44 (f -> NUMBER .)
    RPAREN          reduce using rule 44 (f -> NUMBER .)
    OR              reduce using rule 44 (f -> NUMBER .)
    AND             reduce using rule 44 (f -> NUMBER .)
    IGUALIGUAL      reduce using rule 44 (f -> NUMBER .)
    DESIGUALDAD     reduce using rule 44 (f -> NUMBER .)
    MAYOR           reduce using rule 44 (f -> NUMBER .)
    MENOR           reduce using rule 44 (f -> NUMBER .)
    INTERROGACION   reduce using rule 44 (f -> NUMBER .)
    LLAVECERRADA    reduce using rule 44 (f -> NUMBER .)


state 29

    (34) f -> LPAREN . v2 RPAREN
    (28) v2 -> . v2 OR v
    (29) v2 -> . v2 AND v
    (30) v2 -> . v2 IGUALIGUAL v
    (31) v2 -> . v2 DESIGUALDAD v
    (32) v2 -> . v2 MAYOR v
    (33) v2 -> . v2 MENOR v
    (35) v2 -> . v
    (43) v2 -> . v2 INTERROGACION v DOSPUNTOS v
    (27) v -> . NOT f
    (36) v -> . f
    (37) v -> . v MENOS f
    (38) v -> . v POR f
    (39) v -> . v DIV f
    (40) v -> . v POTENCIA f
    (41) v -> . v PORCENTAJE f
    (42) v -> . v SUMA f
    (25) f -> . TRUE
    (26) f -> . FALSE
    (34) f -> . LPAREN v2 RPAREN
    (44) f -> . NUMBER
    (45) f -> . MENOS f
    (46) f -> . VARIABLE index
    (47) f -> . COLINEALES LPAREN v COMA v RPAREN
    (48) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v COMA v RPAREN
    (49) f -> . MULTIPLICACIONESCALAR LPAREN v COMA v RPAREN
    (50) f -> . CAPITALIZAR LPAREN v RPAREN
    (51) f -> . LENGTH LPAREN v RPAREN
    (52) f -> . CADENA
    (59) f -> . expl index
    (53) expl -> . CORCHETEA lista CORCHETEC
    (54) expl -> . LLAVEABIERTA listareg LLAVECERRADA

    NOT             shift and go to state 40
    TRUE            shift and go to state 23
    FALSE           shift and go to state 32
    LPAREN          shift and go to state 29
    NUMBER          shift and go to state 28
    MENOS           shift and go to state 25
    VARIABLE        shift and go to state 56
    COLINEALES      shift and go to state 21
    MULTIPLICACIONESCALAR shift and go to state 26
    CAPITALIZAR     shift and go to state 36
    LENGTH          shift and go to state 37
    CADENA          shift and go to state 24
    CORCHETEA       shift and go to state 22
    LLAVEABIERTA    shift and go to state 34

    f                              shift and go to state 33
    v                              shift and go to state 63
    v2                             shift and go to state 62
    expl                           shift and go to state 27

state 30

    (60) a -> VARIABLE . index IGUAL v2
    (64) o -> VARIABLE . index MASIGUAL v2
    (65) o -> VARIABLE . index MENOSIGUAL v2
    (66) o -> VARIABLE . index PORIGUAL v2
    (67) o -> VARIABLE . index DIVIGUAL v2
    (68) o -> VARIABLE . index MASMAS
    (69) o -> VARIABLE . index MENOSMENOS
    (46) f -> VARIABLE . index
    (61) index -> . index CORCHETEA v CORCHETEC
    (62) index -> . index PUNTO VARIABLE
    (63) index -> .
